syntax = "proto3";

package chat;
option go_package = "github.com/iypetrov/grpc-learning/gen/chat";

message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string greeting = 1;
}

message StreamRequest {
  string topic = 1;
}
message StreamResponse {
  string message = 1;
}

message UploadRequest {
  string content = 1;
}
message UploadSummary {
  int32 count = 1;
}

message ChatMessage {
  string from = 1;
  string text = 2;
}

service ChatService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
  rpc StreamMessages(StreamRequest) returns (stream StreamResponse);
  rpc UploadMessages(stream UploadRequest) returns (UploadSummary);
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}
